Pull up following revision(s) (requested by dholland in ticket #1612): 	sys/dev/pci/if_lii.c: revision 1.10 PR/41258: Elias Benali: Try to get the ethernet address from the BIOS before failing.